# JENKINS_LOGS

./: .gitignore  Dockerfile  README.md  alembic.ini  builds.db  database.py  docker-compose.yaml  main.py  pyproject.toml  settings.py  tasks.py  webserver.py
jenkins_log/controller/: jenkins_logs.py
jenkins_log/schemas/: __init__.py
jenkins_log/services/: blob.py  jenkins.py
jenkins_log/tests/: conftest.py  test_controller.py  test_logs.py  test_services.py  test_services_blob.py  test_services_jenkins.py
migrations/: env.py
migrations/versions/: 1f90c62fd29f_create_failed_job_reports_table.py  8f8ffc22496b_add_created_at_jenkins_column.py  c13ff090c9d8_create_jenkins_builds_table.py
