[project]
name = "jenkins-logs"
version = "0.0.1"
description = "Projeto para buscar os dados de logs de jobs do Jenkins para salva-los no Blob Storage, de modo a reduzir o espaço ocupado em disco nas VMs."
authors = [
    {name = "G51H",email = "rodrigo.anjinho.prestserv@transpetro.com.br"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "alembic (>=1.16.2,<2.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "pydantic-settings (>=2.10.0,<3.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "aiohttp (>=3.12.13,<4.0.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "azure-storage-blob (>=12.25.1,<13.0.0)",
    "redis (>=6.2.0,<7.0.0)"
]

[tool.taskipy.tasks]
format = "ruff format --preview ."
lint = "ruff check --fix --exit-non-zero-on-fix"
dev = "uvicorn webserver:app --port 8080 --host 0.0.0.0 --reload"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.12.0"
pytest = "^8.4.1"

[tool.poetry.scripts]
test = "pytest:main"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_mode = "strict"

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']



